home-automation/node-red/node-red.Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: node-red
  name: node-red
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: node-red
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: node-red
    spec:
      containers:
        - name: node-red
          image: docker.io/nodered/node-red:5.0.8@sha256:b5adb6c9dd29ab80c852d82bc87daed84e729dcff9b00ca1bf958e6de470f2c1
          ports:
            - name: http
              containerPort: 1880
          volumeMounts:
            - name: data
              mountPath: /data
          livenessProbe:
            exec:
              command: ["node", "/healthcheck.js"]
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            exec:
              command: ["node", "/healthcheck.js"]
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            exec:
              command: ["node", "/healthcheck.js"]
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: node-red-data
