home-automation/node-red/node-red.Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-red
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Browser-based flow editing
    gethomepage.dev/group: Automation
    gethomepage.dev/icon: node-red.png
    gethomepage.dev/name: Node-RED
    gethomepage.dev/ping: "https://nodered.home.elkiaer.net"
spec:
  rules:
    - host: nodered.home.elkiaer.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: node-red
                port:
                  name: http
